--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.4",
+    "knex": "^2.4.1",
+    "mysql2": "^3.0.1",
+    "nestjs-knex": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
