--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.4",
+    "dotenv": "^16.0.3",
     "knex": "^2.4.1",
     "mysql2": "^3.0.1",
     "nestjs-knex": "^2.0.0",
